--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,11 @@
 
 
 body::-webkit-scrollbar {
-    display: none;
-  }
+    width: 0;
+}
 /* Hide scrollbar for IE, Edge and Firefox */
-.body {
+body {
+    overflow: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-  }
-
-h1{
-    font-size: 32px;
-    font-weight: 600;
 }
