--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,15 +6,8 @@ html{
     scroll-behavior: smooth;
 }
 
-
-body::-webkit-scrollbar {
-    width: 0;
-}
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
-    overflow: hidden;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+body{
+    scroll-behavior: smooth;
 }
 
 
